feat: DF1-65 round 3